--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,11 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
+    background-color: #f7f6f6;
     font-weight: 300;
     font-family: 'Poppins', 'sans-serif';
 }
@@ -23,4 +30,27 @@ p {
 
 .show-answer {
     margin-left: 15px;
+}
+
+.mode-selector {
+    margin: auto;
+    display: flex;
+    justify-content: center;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.selector {
+    background-color: #2596be;
+    width: 280px;
+    height: 280px;
+    border-radius: 20px;
+    margin: 15px;
+
+    font-family: 'Poppins', 'sans-serif';
+    color: white;
+    font-size: 36px;
 }
