--- a/client/src/css/SentenceDisplay.css
+++ b/client/src/css/SentenceDisplay.css
@@ -4,6 +4,18 @@
     border: 2px solid #222222;
     border-radius: 20px;
     height: 100px;
+    width: 50vw;
+    padding: 0 10px 0 20px;
+    align-items: center;
+    justify-content: center;
+}
+
+.sentenceButtons {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
+    margin-left: auto;
+    margin-right: 20px;
 }
 
 .editSentence, .removeSentence {
@@ -17,6 +29,7 @@
 
 .editSentence {
     background-color: #2596be;
+    right: 90px;
 }
 
 .removeSentence {
@@ -24,6 +37,6 @@
 }
 
 .sentenceDisplayText {
+    margin-left: auto;
     padding-right: 10px;
 }
-
