--- a/client/src/css/Selector.css
+++ b/client/src/css/Selector.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     align-items: center;
     color: white;
-    width: 280px;
-    height: 280px;
+    width: 17vw;
+    height: 17vw;
     background-color: #2596be;
     font-size: 40px;
 }
