--- a/client/src/css/Selector.css
+++ b/client/src/css/Selector.css
@@ -6,7 +6,7 @@
     width: 17vw;
     height: 17vw;
     background-color: #2596be;
-    font-size: 3rem;
+    font-size: 2.5vw;
     padding-top: 2.5vw;
 }
 
