--- a/client/src/css/SentenceForm.css
+++ b/client/src/css/SentenceForm.css
@@ -1,14 +1,3 @@
-.removeText {
-    justify-content: center;
-    align-items: center;
-    margin: 6vh 4vw;
-    font-size: 1.3rem;
-}
-
-.removeText .sentenceDisplayText {
-    font-weight: bold;
-}
-
 .popup-window-buttons {
     margin: 50px;
     display: flex;
@@ -26,4 +15,22 @@
 .popup-window-buttons input:hover {
     background-color: #e0dddd;
     border-radius: 5px;
+}
+
+.new-sentence-inputs {
+    display: grid;
+    grid-gap: 10px;
+    margin: 50px;
+}
+
+.formItem {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+}
+
+.new-sentence input {
+    border: 1px solid black;
+    border-radius: 5px;
+    font-size: 1rem;
+    padding: 5px;
 }
