--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -4,6 +4,11 @@ body {
   justify-content: center;
   background-color: #F7F6F6;
   color: #222222;
+  position: relative;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
 .selectors {
