--- a/client/src/css/PopUpWindow.css
+++ b/client/src/css/PopUpWindow.css
@@ -11,7 +11,7 @@
 }
 
 .popup-window {
-    background-color: #F7F6F6;
+    background-color: white;
     border-radius: 20px;
     border: 1px solid black;
     min-width: 30vw;
