--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -1,18 +1,27 @@
-body {
+/*
+main {
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  background-color: #F7F6F6;
-  color: #222222;
-  position: relative;
-  top: 0;
-  right: 0;
-  bottom: 0;
+  align-items: center;
+  position: fixed;
+  width: 100%;
+  height: 100%;
   left: 0;
+  top: 0;
+  gap: 20px;
+}
+ */
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin: 0;
+  min-height: 95vh;
+  min-width: 95vw;
 }
 
-.selectors {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
+.navBg {
+  background-color: #2596be;
 }
