--- a/client/src/css/Exam.css
+++ b/client/src/css/Exam.css
@@ -1,7 +1,3 @@
-body {
-    background-color: #f7f6f6;
-}
-
 .examWindow {
     width: 50vw;
     height: 50vh;
@@ -15,11 +11,18 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
+    min-height: 100%;
+    min-width: 100%;
+}
+
+.examText p {
+    margin: 0;
+}
+
+.examText input {
+    border: 1px solid black;
+    border-radius: 5px;
+    margin-left: 10px;
 }
 
 .leftButton, .rightButton {
