--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -2,9 +2,8 @@
 
 body {
     margin: 0;
-    display: flex;
-    place-items: center;
     font-family: 'Poppins', sans-serif;
+    background-color: #f7f6f6;
     min-width: 320px;
     min-height: 100vh;
 }
@@ -22,4 +21,3 @@ button {
 a {
     text-decoration: inherit;
 }
-
