--- a/client/src/css/ExamSentences.css
+++ b/client/src/css/ExamSentences.css
@@ -18,6 +18,7 @@
     display: flex;
     align-items: center;
     position: relative;
+    margin-top: 1.5vw;
 }
 
 .question .newSentence .firstPart {
