Fix minor design and build folders

--- a/client/src/css/Exam.css
+++ b/client/src/css/Exam.css
@@ -23,6 +23,7 @@
     border: 1px solid black;
     border-radius: 5px;
     margin-left: 10px;
+    background-color: #f7f6f6;
 }
 
 .leftButton, .rightButton {
