--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -1,17 +1,3 @@
-/*
-main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  gap: 20px;
-}
- */
-
 main {
   display: flex;
   justify-content: center;
@@ -20,6 +6,7 @@ main {
   margin: 0;
   min-height: 95vh;
   min-width: 95vw;
+  background-color: #f7f6f6;
 }
 
 .navBg {
