--- a/client/src/css/SentenceForm.css
+++ b/client/src/css/SentenceForm.css
@@ -5,7 +5,6 @@
 }
 
 .popup-window-buttons input {
-    background-color: inherit;
     border: 0;
     font-size: 1.5rem;
     color: #2596be;
@@ -26,6 +25,12 @@
 .formItem {
     display: grid;
     grid-template-rows: 1fr 1fr;
+}
+
+.formItem input {
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: #f7f6f6;
 }
 
 .new-sentence input {
